[package]
name = "peano"
version = "1.0.0"
authors = ["Paho Lurie-Gregg <paho@paholg.com>"]
description = "The peano numbers implemented in Rust's type system."
homepage = "http://paholg.com/peano"
documentation = "http://paholg.com/doc/peano"
repository = "https://github.com/paholg/peano"
readme = "README.md"
license = "MIT/Apache-2.0"

[lib]
name = "peano"
